# tuw-raster-geometry

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Justfile  LICENSE  README.md  data.json  myst.yml  pyproject.toml
.github/workflows/: test_coverage.yml  test_no_extas.yml  test_platforms.yml  test_publish.yml
docs/: index.ipynb
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_e54c7630eba3465f___init___py.html  z_e54c7630eba3465f_common_types_py.html  z_e54c7630eba3465f_geographic_py.html  z_e54c7630eba3465f_optional_modules_py.html  z_e54c7630eba3465f_pixel_py.html  z_e54c7630eba3465f_projected_py.html  z_e54c7630eba3465f_tile_operations_py.html
src/tuw_raster_geometry/: __init__.py  common_types.py  geographic.py  optional_modules.py  pixel.py  projected.py  tile_operations.py
tests/: test_bbox.py  test_geographic_extent.py  test_meta.py  test_pixel_rects.py  test_tile_operations.py
